--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </button>
     <div id="myDropdown" class="dropdown-content">
       <a id="mobileShareLink">مشاركة</a>
-      <a href="TahadiQuran/contact.html">تواصل</a>
+      <a href="/TahadiQuran/contact.html">تواصل</a>
     </div>
   </div>
 
