--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     <meta name="msapplication-TileImage" content="/TahadiQuran/images/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
   
-      <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QSX14QQ0KK"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G0CFSD9FQ8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      gtag('config', 'G-QSX14QQ0KK');
-    </script>
+  gtag('config', 'G-G0CFSD9FQ8');
+</script>
   
 </head>
 <body>
