--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
   </button>
 
   <div class="contact-share">
+        <!-- Add the "Support Palestine" link here -->
+  <a href="https://donate.unrwa.org/zakat/~haditi" target="_blank" class="palestine-link">
+  <span class="palestine-text">إدعم فلسطين</span>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Flag_of_Palestine.svg/1280px-Flag_of_Palestine.svg.png" alt="Palestine Flag" class="palestine-flag">
+    
+  </a>
+
     <a id="shareLink">مشاركة</a>
     <a href="/TahadiQuran/contact.html">تواصل</a>
   </div>
@@ -58,6 +65,11 @@
       القائمة <i class="fa fa-caret-down"></i>
     </button>
     <div id="myDropdown" class="dropdown-content">
+      <a href="https://donate.unrwa.org/zakat/~haditi" target="_blank" class="palestine-link">
+    <span class="palestine-text">إدعم فلسطين</span>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Flag_of_Palestine.svg/1280px-Flag_of_Palestine.svg.png" alt="Palestine Flag" class="palestine-flag">
+    
+      </a>
       <a id="mobileShareLink">مشاركة</a>
       <a href="/TahadiQuran/contact.html">تواصل</a>
     </div>
